<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/screening_header">
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="timer_enabled"
            app:summary="@string/timer_enabled_description"
            app:title="@string/timer_enabled_header" />
        <ListPreference
            app:defaultValue="12"
            app:dependency="timer_enabled"
            app:key="time_limit"
            app:title="@string/time_limit_header" />
        <ListPreference
            app:defaultValue="12"
            app:key="question_count"
            app:title="@string/question_count_header" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/user_interface_header">
        <ListPreference
            app:entries="@array/supportedLanguages"
            app:entryValues="@array/supportedLanguageCodes"
            app:key="language"
            app:title="@string/language_header" />
    </PreferenceCategory>

</PreferenceScreen>
